@@ -258,9 +258,6 @@ class Codebird
       'collections/entries',
       'collections/list',
       'collections/show',
-      'direct_messages',
-      'direct_messages/sent',
-      'direct_messages/show',
       'favorites/list',
       'followers/ids',
       'followers/list',
@@ -394,9 +391,6 @@ class Codebird
       'collections/entries/move',
       'collections/entries/remove',
       'collections/update',
-      'direct_messages/destroy',
-      'direct_messages/new',
-      'dm/new',
       'favorites/create',
       'favorites/destroy',
       'friendships/create',
